# Titan

./: README.md
src/: fastrtps-profile.xml  localizer_rviz_config.rviz  mapping.rviz
src/ada/: ada.ino  encoder_driver.ino  motor_driver.ino
src/arduino/: arduino.ino  commands.h  motor_driver.h
src/arduino_battery/: arduino_battery.ino  commands.h  encoder_driver.h  imu.h  motor_driver.h
src/battery_status/: CMakeLists.txt  package.xml
src/battery_status/include/battery_status/: comms.h
src/battery_status/launch/: battery_status.launch.py
src/battery_status/src/: battery_status.cpp  comms.cpp
src/depthai/: CMakeLists.txt  package.xml
src/depthai/config/: camera_copy.yaml
src/depthai/launch/: camera.launch.py  rgbd_pcl.launch.py  spatial_bb.launch.py
src/depthai/scripts/: person_broadcast.py
src/encoder_new/: commands.h  diff_controller.h  encoder_driver.h  encoder_driver.ino  encoder_new.ino  motor_driver.h  motor_driver.ino
src/gazebo_sim/: CMakeLists.txt  package.xml
src/gazebo_sim/launch/: start_gazebo.launch.py
src/gazebo_sim/meshes/: crane.blend1  crane.dae  first wheel.blend  prototype.dae
src/gazebo_sim/urdf/: nav_test.gazebo.xacro  prototype.gazebo.xacro  prototype.gazebo.xsd
src/gazebo_sim/worlds/: empty_world.world  walled.world
src/gazebo_sim/worlds/wall/: model.sdf
src/imu_arduino/: commands.h  imu_arduino.ino
src/imu_hw/: CMakeLists.txt  README.md  imu_interface.xml  package.xml
src/imu_hw/bringup/config/: ekf.yaml  ekf_map.yaml  imu_sensor_config.yaml
src/imu_hw/bringup/launch/: ekf.launch.py  imu_sensor.launch.py
src/imu_hw/hardware/: imu_interface.cpp
src/imu_hw/hardware/include/imu_interface/: arduino_comms.hpp  imu_arduino.hpp  imu_interface.hpp  visibility_control.h
src/imu_node/: CMakeLists.txt  package.xml
src/imu_node/include/imu_node/: comms.h
src/imu_node/src/: comms.cpp  imu_node.cpp
src/motor_control/: CMakeLists.txt  motor_interface.xml  package.xml
src/motor_control/config/: controller_config.yaml
src/motor_control/include/motor_control/: comms.h  config.h  motor_interface.hpp  wheel.h
src/motor_control/launch/: motor_launch.py
src/motor_control/src/: comms.cpp  motor_interface.cpp  wheel.cpp
src/navigator_planner/: CMakeLists.txt  package.xml
src/navigator_planner/config/: battery.xml  follow_point.xml  nav2_params.yaml  navigate_to_pose_w_replanning_and_recovery.xml  navigate_w_battery.xml
src/navigator_planner/launch/: navigation.launch.py
src/navigator_planner/navigator_planner/: robot_navigator.py
src/navigator_planner/scripts/: final_test.py  table_navigation.py
src/pallet_actuator_arduino/: commands.h  encoder_driver.h  encoder_driver.ino  motor_driver.h  motor_driver.ino  pallet_actuator_arduino.ino
src/pallet_loader/: CMakeLists.txt  package.xml  pallet_loader.xml  publisher_forward_position_controller.py
src/pallet_loader/config/: pallet_forward_position_publisher.yaml  pallet_modular_actuators.yaml
src/pallet_loader/include/pallet_loader/: comms.h  config.h  pallet_loader.hpp
src/pallet_loader/launch/: pallet_modular_actuators.launch.py  test_forward_position_controller.launch.py
src/pallet_loader/src/: comms.cpp  pallet_loader.cpp
src/plane/: CMakeLists.txt  package.xml
src/plane/launch/: imu_pub.launch.py  plane.launch.py
src/plane/urdf/: hardware_interface.xacro  plane.xacro
src/prototype/: CMakeLists.txt  package.xml
src/prototype/action/: Actuator.action  AiCamera.action  FoodMenu.action  GoTo.action  Lift.action  SendCoordinates.action
src/prototype/config/: camera.yaml  ekf.yaml  ekf_map.yaml  motor_control.yaml  twist_mux.yaml
src/prototype/launch/: camera.launch.py  camera_local.launch.py  camera_uncompressed_launch.py  gui.launch.py  hand_gesture.launch.py  image_pro.py  imu_launch.py  joystick.launch.py  laser_launch.py  localization_launch.py  main_launch.py  motor_launch.py  navigation.launch.py  no_com_camera.launch.py  rgbd_pcl.launch.py  robot_localization_launch.py  robotmodel.launch.py  rtab_odom.launch.py  rtabmap.launch.py  rviz2_launch.py  sensors_launch.py  spatial_bb.launch.py  spawn.launch.xml  spawn_pos.launch.py
src/prototype/meshes/: Dazzling.stl  Prototype_mesh(1).stl  Prototype_mesh(3).stl  Prototype_mesh.stl  Wheels.dae  blender_mesh.stl  crane.blend  prototype.blend  tinker.stl
src/prototype/meshes/tires/: obj.mtl
src/prototype/msg/: Food.msg
src/prototype/rviz/: localizer_rviz_config.rviz
src/prototype/sambot/: camera.xacro  hardware_interface.xacro  joint_macros.xacro  lidar.xacro  link_macros.xacro  prototype.xacro  wheel.xacro
src/prototype/scripts/: action_client.py  action_server.py  battery.py  battery_boot.py  battery_test.py  behaviours.py  data_gathering.py  face.py  goal.py  hand.py  hand_sign_recognition.py  lift_test.py  map.py  move_laser.py  move_shaft.py  object_broadcast.py  odom_base.py  py_tree_server.py  robotmodel.py  service_velocity.py  spatial.py  string_sub.py  test.py  tf.py  waiter.dot
src/prototype/urdf/: camera.xacro  hardware_interface.xacro  joint_macros.xacro  lidar.xacro  link_macros.xacro  pallet_loader.xacro  prototype.xacro  wheel.xacro
src/ros2_mapping/: CMakeLists.txt  package.xml
src/ros2_mapping/config/: aic_lab.pgm  aic_lab.yaml  amcl_config.yaml  co_space.pgm  co_space.yaml  map_1695235642.pgm  map_1695235642.yaml  map_1695499763.pgm  map_1695499763.yaml  map_1695499763_copy.pgm  mapper_params_online_async.yaml  mapper_params_online_sync.yaml
src/ros2_mapping/launch/: localization_launch.py  nav2_map_server.launch.py  online_async_launch.py  online_sync_launch.py
src/rosie_face/: CMakeLists.txt  package.xml
src/rosie_face/launch/: gui.launch.py
src/rosie_face/rosie_face/: face.py  kitchen_face.py  menu.py  table_page.py
src/rosie_face/scripts/: customer_menu.py  kitchen_table.py  waiter.py
src/serial_driver/: CMakeLists.txt
src/transport/serial_driver/: CMakeLists.txt
