<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>prototype</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="tolasingganesh@gmail.com">tolasing</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>action_msgs</depend>
  <depend>robot_state_publisher</depend>
  <depend>py_trees_ros</depend>
  <depend>py_trees_ros_interfaces</depend>
<member_of_group>rosidl_interface_packages</member_of_group>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>